# SPbU-Homework-1-semester

./: CMakeLists.txt  README.md
.github/workflows/: build_with_lint.yml
final/: task_1.c
final2/: test_2_task_3.c
homework1/: task_1.c  task_2.c  task_3.c  task_4.c  task_5.c
homework2/: task_1.c  task_2.c
homework3/: task_1.c  task_3.c
homework4/: task_1.c  task_2.c  task_3.c
homework5/: task_1.c
retest1/: task_1_1.c  task_2_2.c
test1/: task_2.c
test2/: task_1.c
